--- a/about.html
+++ b/about.html
@@ -3,18 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="More about Nosipho Miles and he contact information."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>About [Your name]</title>
+    <title>About Nosipho Miles</title>
   </head>
   <body>
-    <a href="index.html" class="homepage-link">Back to homepage</a>
+    <a href="/" class="homepage-link">Back to homepage</a>
     <h1>About me</h1>
     <h3>Front-end developer from Manzini, Eswatini</h3>
     <p>
@@ -27,23 +31,26 @@
       <div class="row">
         <div class="col-md-4">
           <img
-            src="images/yoga.png"
+            src="/images/yoga.png"
             class="img-flex rounded shadow-sm p-2 border"
             width="220px"
+            alt="yoga app"
           />
         </div>
         <div class="col-md-4">
           <img
-            src="images/weather.png"
+            src="/images/weather.png"
             class="img-flex rounded shadow-sm p-2 border"
             width="220px"
+            alt="weather app"
           />
         </div>
         <div class="col-md-4">
           <img
-            src="images/yogurt.png"
+            src="/images/yogurt.png"
             class="img-flex rounded shadow-sm p-2 border"
             width="220px"
+            alt="yogurt app"
           />
         </div>
       </div>
