--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="Nosipho Sashya Miles' summary of projects as a Front-end developer"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[Your name]</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Nosipho Miles: Projects</title>
+    <link rel="stylesheet" href="/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -36,15 +40,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -54,13 +56,13 @@
     <h1>Nosipho Sashya Miles</h1>
     <h3>🌸 Front-end developer, based in Eswatini</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="/about.html#contact" class="contact-link">Contact me</a>
+      <a href="/about.html" class="about-link">About me</a>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid" />
+          <img src="/images/yoga.png" class="img-fluid" alt="yoga app" />
         </div>
         <div class="col-md-6">
           <div class="text-em">Yoga app</div>
@@ -87,12 +89,12 @@
           </button>
         </div>
         <div class="col-md-6">
-          <img src="images/weather.png" class="img-fluid" />
+          <img src="/images/weather.png" class="img-fluid" alt="weather app" />
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid" />
+          <img src="/images/yogurt.png" class="img-fluid" alt="yogurt app" />
         </div>
         <div class="col-md-6">
           <div class="text-em">Yogurt app</div>
